# opengl-demo

./: CMakeLists.txt
res/shaders/: basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexBuffer.cpp  app.cpp
